# Iraq-National-Workforce-Platform-INWP

./: .gitignore  AGENTS.md  README.md
backend/sync-engine/: Cargo.toml  build.rs
backend/sync-engine/configs/: sync-engine.toml
backend/sync-engine/deploy/: Dockerfile  docker-compose.edge.yml  docker-compose.national.yml  docker-compose.regional.yml
backend/sync-engine/migrations/: 001_initial_schema.sql
backend/sync-engine/proto/: sync.proto  sync_service.proto
backend/sync-engine/src/: config.rs  error.rs  lib.rs  main.rs
backend/sync-engine/src/anti_corruption/: anomaly.rs  mod.rs  quarantine.rs  scanner.rs
backend/sync-engine/src/chaos/: byzantine.rs  corruption.rs  mod.rs  partition.rs  recovery_test.rs  simulator.rs
backend/sync-engine/src/conflict_journal/: forensic.rs  history.rs  mod.rs
backend/sync-engine/src/consolidation/: automation.rs  control.rs  evolution.rs  freeze.rs  graph.rs  healing.rs  mod.rs  observer.rs  operations.rs  security.rs
backend/sync-engine/src/control_plane/: mod.rs  orchestrator.rs  topology.rs
backend/sync-engine/src/core/: checkpoint.rs  crdt.rs  merkle.rs  mod.rs  node.rs  partition.rs  types.rs  version.rs
backend/sync-engine/src/edge/: autonomy.rs  cache.rs  continuity.rs  mod.rs
backend/sync-engine/src/event_store/: chain.rs  mod.rs  tamper.rs
backend/sync-engine/src/events/: consumer.rs  contract.rs  envelope.rs  mod.rs  producer.rs  validation.rs
backend/sync-engine/src/federation/: mesh.rs  mod.rs  routing.rs  topology.rs
backend/sync-engine/src/governance/: analyzer.rs  compatibility.rs  deployment.rs  event_registry.rs  federation.rs  migration.rs  mod.rs  registry.rs  replay.rs  schema.rs  schema_evolution.rs  sovereignty.rs  sovereignty_ext.rs  validator.rs
backend/sync-engine/src/observability/: health.rs  metrics.rs  mod.rs
backend/sync-engine/src/partition_recovery/: healing.rs  mod.rs  split_brain.rs
backend/sync-engine/src/protocol/: codec.rs  commit.rs  discovery.rs  exchange.rs  handshake.rs  mod.rs  reconcile.rs  transfer.rs
backend/sync-engine/src/reconciliation/: matrix.rs  mod.rs  quarantine.rs  resolver.rs  strategy.rs
backend/sync-engine/src/recovery/: checkpoint.rs  corruption.rs  mod.rs  replay.rs  state.rs
backend/sync-engine/src/replay_verifier/: mod.rs  safety.rs  validator.rs
backend/sync-engine/src/runtime/: benchmark.rs  certification.rs  complexity.rs  constitution.rs  mod.rs  operations.rs  replay_runtime.rs  scheduler.rs  (+3 more)
(+79 files in other folders)
